changed dto names and worked the hints